--- a/index.html
+++ b/index.html
@@ -1,11 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <title>Portillo's Menu, Deals, and Locations</title>
     <meta charset="UTF-8">
-    <title>Welcome to Portillo's Menu</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Discover Portillo's menu, including famous Chicago-style hot dogs, Italian beef, and exclusive deals. Find the nearest Portillo's location and enjoy delicious food.">
 </head>
+
 <body>
-    <h1>Portillo's Menu</h1>
-    <p>Yeh ek test page hai jo GitHub Pages ke liye bana hai.</p>
+    <header>
+        <h1>Portillo's Menu, Deals, and Locations</h1>
+        <p>Explore the world of <strong>Portillo's</strong>—famous for its Chicago-style hot dogs, Italian beef sandwiches, and more.</p>
+    </header>
+
+    <section>
+        <h2>🍔 What Makes Portillo's Special?</h2>
+        <p>Portillo's is a beloved American fast-casual restaurant chain known for its authentic Chicago flavors. From <strong>char-grilled burgers</strong> to <strong>crispy French fries</strong>, each dish reflects a commitment to quality and taste.</p>
+
+        <p>Visit our dedicated fan page for more information: <a href="https://belugawhale.org" target="_blank">Click here</a></p>
+
+        <h3>Signature Menu Items</h3>
+        <ul>
+            <li>Chicago-Style Hot Dog</li>
+            <li>Italian Beef Sandwich</li>
+            <li>Char-Grilled Burgers</li>
+            <li>Chocolate Cake Shake</li>
+            <li>Fresh Garden Salad</li>
+        </ul>
+
+        <h3>Portillo's Seasonal Specials</h3>
+        <p>Portillo's offers limited-time seasonal items, from holiday-themed desserts to unique sandwich creations. Keep an eye on the menu for the latest offerings.</p>
+    </section>
+
+    <section>
+        <h2>📍 Portillo's Locations</h2>
+        <p>With locations across the United States, finding a nearby Portillo's is easier than ever. Major cities like Chicago, Los Angeles, and Orlando boast multiple branches.</p>
+
+        <p>Find your nearest location on the official Portillo's website or <a href="https://portillos-menu.com/" target="_blank">check our guide</a> for location-specific details.</p>
+
+        <h3>Popular States with Portillo's Outlets:</h3>
+        <ul>
+            <li>Illinois</li>
+            <li>California</li>
+            <li>Arizona</li>
+            <li>Indiana</li>
+            <li>Florida</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>🎉 Why People Love Portillo's</h2>
+        <p>Fans adore Portillo's not only for its iconic menu but also for its nostalgic 1950s-style dining experience and top-tier customer service. Every visit guarantees a taste of American culinary history.</p>
+
+        <h3>Customer Favorites</h3>
+        <p>According to loyal customers, must-try items include:</p>
+        <ul>
+            <li>Cheese Fries with House Dip</li>
+            <li>Maxwell Street Polish Sausage</li>
+            <li>Classic Italian Sausage</li>
+        </ul>
+
+        <p>Discover more fan favorites and exclusive deals: <a href="https://portillos-menu.com/" target="_blank">Explore now</a></p>
+    </section>
+
+    <section>
+        <h2>💼 Portillo's Job Opportunities</h2>
+        <p>Interested in working at Portillo's? The company frequently hires for roles across customer service, management, and culinary teams.</p>
+
+        <p>Apply today through their official job portal or <a href="https://portillos-menu.com/" target="_blank">learn more here</a>.</p>
+    </section>
+
+    <footer>
+        <p>© 2025 Portillo's Fan Page | All rights reserved.</p>
+    </footer>
+
 </body>
+
 </html>
