--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h2>🍔 What Makes Portillo's Special?</h2>
         <p>Portillo's is a beloved American fast-casual restaurant chain known for its authentic Chicago flavors. From <strong>char-grilled burgers</strong> to <strong>crispy French fries</strong>, each dish reflects a commitment to quality and taste.</p>
 
-        <p>Visit our dedicated fan page for more information: <a href="https://belugawhale.org" target="_blank">Click here</a></p>
+        <p>Visit our dedicated fan page for more information: <a href="https://portillos-menu.com/" target="_blank">Click here</a></p>
 
         <h3>Signature Menu Items</h3>
         <ul>
